# model-alignment

./: .gitignore  README.md  pyproject.toml
notebooks/: Gemma_for_Model_Alignment.ipynb  Labeler_API_for_Model_Alignment.ipynb  Single_Run_Prompt_API_for_Model_Alignment.ipynb
src/model_alignment/: __init__.py  alignable_model_calls.py  labeler.py  labeler_prompt_templates.py  labeler_types.py  model_helper.py  prompts.py  single_run.py  utils.py
